fix(pie-switch): DSW-3081 ensure vertical alignment is set

--- a/packages/components/pie-switch/src/switch.scss
+++ b/packages/components/pie-switch/src/switch.scss
@@ -16,6 +16,7 @@
     display: inline-flex;
     align-items: center;
     gap: var(--dt-spacing-b);
+    vertical-align: top;
     font-family: var(--dt-font-body-l-family);
     cursor: pointer;
 
